[gd_scene load_steps=13 format=3 uid="uid://bw1777hbxmoq5"]

[ext_resource type="Texture2D" uid="uid://dscmk62dk2k62" path="res://Assets/TileMap Textures/ProtoTextures2.png" id="1"]
[ext_resource type="Script" path="res://Scenes/map.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://wq4gsfm6vxj4" path="res://Scenes/Player.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://xw6fb74qkjri" path="res://Scenes/PauseMenu.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://c3n5odmmuqh0r" path="res://Scenes/Enemy.tscn" id="5"]
[ext_resource type="Script" path="res://Scenes/Pickup.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://dx6klyqjo020y" path="res://Assets/Fist.png" id="7"]

[sub_resource type="TileSetAtlasSource" id="1"]
texture = ExtResource("1")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0

[sub_resource type="TileSet" id="2"]
tile_size = Vector2i(256, 256)
sources/0 = SubResource("1")

[sub_resource type="CircleShape2D" id="3"]
radius = 43.9065

[sub_resource type="RectangleShape2D" id="RectangleShape2D_axu7y"]
size = Vector2(1527, 1411.92)

[sub_resource type="LabelSettings" id="LabelSettings_wkmne"]
font_size = 150
font_color = Color(0, 0, 0, 1)

[node name="Map" type="TileMap"]
position = Vector2(14, 48)
scale = Vector2(1, 1.01847)
tile_set = SubResource("2")
format = 2
layer_0/tile_data = PackedInt32Array(1, 0, 0, 0, 0, 0, 262144, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 4, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 5, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0, 262149, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 65535, 131072, 0, 131071, 131072, 0, 196607, 131072, 0, 262143, 131072, 0, 196608, 0, 0, 131072, 0, 0, 65536, 0, 0, 327679, 131072, 0)
script = ExtResource("2")

[node name="Player" parent="." instance=ExtResource("3")]
position = Vector2(533, 299.469)

[node name="MoveList" parent="Player/MovesUI" index="1"]
visible = true

[node name="InventoryButton" parent="Player/MovesUI" index="3"]
metadata/_edit_use_anchors_ = true

[node name="PauseMenu" parent="." instance=ExtResource("4")]

[node name="AFS" parent="." instance=ExtResource("5")]
position = Vector2(1340, 129.606)

[node name="Pickup" type="Area2D" parent="."]
script = ExtResource("6")

[node name="Sprite2D" type="Sprite2D" parent="Pickup"]
position = Vector2(370, 117.824)
scale = Vector2(0.03, 0.03)
texture = ExtResource("7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pickup"]
position = Vector2(367, 119.788)
shape = SubResource("3")

[node name="FightArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="FightArea"]
position = Vector2(1558, 717.743)
shape = SubResource("RectangleShape2D_axu7y")

[node name="FightIndicator" type="Label" parent="."]
visible = false
offset_left = 418.0
offset_top = 442.821
offset_right = 1552.0
offset_bottom = 647.821
text = "Get ready for a fight!"
label_settings = SubResource("LabelSettings_wkmne")

[connection signal="area_shape_entered" from="Pickup" to="Pickup" method="_on_area_shape_entered" flags=18]
[connection signal="area_shape_entered" from="FightArea" to="." method="_on_fight_area_area_shape_entered"]
[connection signal="area_shape_exited" from="FightArea" to="." method="_on_fight_area_area_shape_exited"]

[editable path="Player"]
[editable path="Player/HUD"]
[editable path="AFS"]
